# FrostyEditor

./: .gitignore  .gitmodules  CMakeLists.txt
src/: FontResource.cpp  FontResource.ixx  ImGuiDebugLayer.ixx  RendererDevelopmentLayer.ixx  main.cpp
src/Editor/: EditorLayer.cpp  EditorLayer.ixx  ImGuiRenderViewports.cppm
